Fix z-index override.

--- a/app.css
+++ b/app.css
@@ -5,6 +5,7 @@
   right: 0;
   bottom: 0;
   left: 0;
+  z-index: 10000;
 }
 
 .eager-cover-message[data-visibility="visible"] {
